security/istio/k8s/deployment.yaml
# Deployment for Istiod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
  namespace: istio-system
  labels:
    tier: middleware
    type: service-mesh
spec:
  replicas: 1 # should be 3 in production
  selector:
    matchLabels:
      app: istiod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: istiod
    spec:
      serviceAccountName: istiod
      containers:
      - name: discovery
        image: docker.io/istio/pilot:1.19.3
        args:
        - "discovery"
        - "--monitoringAddr=:15014"
        - "--log_output_level=default:info"
        - "--domain=cluster.local"
        - "--keepaliveMaxServerConnectionAge=30m"
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 1000m
            memory: 4Gi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/istio/config
        - name: istio-token
          mountPath: /var/run/secrets/tokens
        - name: cacerts
          mountPath: /etc/cacerts
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: istio-config
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - name: cacerts
        secret:
          secretName: cacerts
          optional: true
