security/istio/k8s/service.yaml
# Service for Istiod
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
  labels:
    tier: middleware
    type: service-mesh
    app: istiod
spec:
  ports:
  - port: 15010
    name: grpc-xds
    protocol: TCP
  - port: 15012
    name: https-dns
    protocol: TCP
  - port: 443
    name: https-webhook
    targetPort: 15017
    protocol: TCP
  - port: 15014
    name: http-monitoring
    protocol: TCP
  selector:
    app: istiod
